--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
       }, 1000);
     }
 
-    const weddingDate = new Date(2025, 11, 13, 16, 30, 0).getTime();
+    const weddingDate = new Date(2025, 11, 3, 16, 30, 0).getTime(); // 3/12/2025 16:30
+
 
     setInterval(() => {
       const now = new Date().getTime();
